# TextEditor

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
